--- a/index.html
+++ b/index.html
@@ -1,268 +1,168 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dronix - Venta y Mantenimiento de Drones</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto:wght@300;500&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dronix - Tecnología Aérea</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
   <style>
-    :root {
-      --primary: #00f7ff;
-      --secondary: #f97316;
-      --bg-gradient: linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%);
-      --glass-bg: rgba(255, 255, 255, 0.05);
-    }
-
     body {
+      font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: var(--bg-gradient);
-      color: white;
-      scroll-behavior: smooth;
+      padding: 0;
+      background: #f5f5f5;
+      color: #333;
     }
-
-    /* Nuevo Navbar Futurista */
     .navbar {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: var(--glass-bg);
-      backdrop-filter: blur(10px);
-      z-index: 1000;
-      padding: 1rem 0;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-    }
-
-    .nav-container {
-      max-width: 1200px;
-      margin: 0 auto;
+      background: #000;
+      color: #fff;
+      padding: 1rem 2rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 0 2rem;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
-
     .nav-logo {
-      width: 120px;
-      filter: drop-shadow(0 0 5px var(--primary));
+      height: 50px;
     }
-
     .nav-links {
       display: flex;
-      gap: 2rem;
+      gap: 1.5rem;
     }
-
     .nav-link {
       color: white;
       text-decoration: none;
-      font-weight: 500;
-      position: relative;
-      transition: all 0.3s ease;
+      font-weight: bold;
+      transition: color 0.3s;
     }
-
-    .nav-link::after {
-      content: '';
-      position: absolute;
-      bottom: -5px;
-      left: 0;
-      width: 0;
-      height: 2px;
-      background: var(--primary);
-      transition: width 0.3s ease;
+    .nav-link:hover {
+      color: #1abc9c;
     }
-
-    .nav-link:hover::after {
-      width: 100%;
-    }
-
-    /* Header Mejorado */
     header {
-      padding: 150px 50px 100px;
       text-align: center;
-      position: relative;
-      overflow: hidden;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: white;
+      padding: 4rem 2rem;
     }
-
-    header::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: radial-gradient(circle at 50% 50%, rgba(0, 247, 255, 0.1) 0%, transparent 60%);
-      pointer-events: none;
-    }
-
-    h1 {
+    header h1 {
+      font-size: 4rem;
+      margin: 0;
       font-family: 'Orbitron', sans-serif;
-      font-size: 4em;
-      background: linear-gradient(45deg, var(--primary), var(--secondary));
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      margin: 1rem 0;
-      text-shadow: 0 0 15px rgba(0, 247, 255, 0.3);
+      animation: float 3s ease-in-out infinite;
     }
-
-    /* Tarjetas de Servicios */
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+    }
+    .seccion {
+      padding: 4rem 2rem;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    .titulo {
+      font-size: 2rem;
+      margin-bottom: 2rem;
+      text-align: center;
+    }
     .card-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 2rem;
-      padding: 2rem;
     }
-
     .card {
-      background: var(--glass-bg);
-      border-radius: 15px;
+      background: white;
       padding: 2rem;
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      text-align: center;
     }
-
-    .card:hover {
-      transform: translateY(-10px);
-      box-shadow: 0 10px 30px rgba(0, 247, 255, 0.1);
-    }
-
-    .card h3 {
-      color: var(--primary);
-      font-family: 'Orbitron', sans-serif;
-      margin: 1rem 0;
-    }
-
-    /* Nuevo diseño para listas */
     .price-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      display: flex;
+      flex-direction: column;
       gap: 1.5rem;
-      padding: 2rem;
+      align-items: center;
     }
-
     .price-item {
+      background: #fff;
+      padding: 1rem 2rem;
+      border-radius: 10px;
       display: flex;
       align-items: center;
-      padding: 1.5rem;
-      background: var(--glass-bg);
-      border-radius: 10px;
-      border: 1px solid rgba(255, 255, 255, 0.1);
+      gap: 1rem;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      width: 100%;
+      max-width: 500px;
     }
-
-    .price-item i {
-      font-size: 1.5rem;
-      margin-right: 1rem;
-      color: var(--primary);
+    .contact-section {
+      text-align: center;
     }
-
-    /* Botones Mejorados */
     .boton-contacto {
+      background-color: #25D366;
+      color: white;
+      padding: 0.8rem 1.5rem;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      text-decoration: none;
       display: inline-flex;
       align-items: center;
-      gap: 10px;
-      background: linear-gradient(45deg, var(--primary), var(--secondary));
-      border: none;
-      padding: 1rem 2rem;
-      color: white;
-      font-size: 1.1rem;
-      cursor: pointer;
-      border-radius: 50px;
-      text-decoration: none;
-      transition: all 0.3s ease;
-      box-shadow: 0 5px 15px rgba(0, 247, 255, 0.3);
+      gap: 0.5rem;
+      margin-top: 1rem;
+      transition: background-color 0.3s;
     }
-
     .boton-contacto:hover {
-      transform: scale(1.05);
-      box-shadow: 0 8px 25px rgba(0, 247, 255, 0.5);
+      background-color: #1da851;
     }
-
-    /* Sección de Contacto Mejorada */
-    .contact-section {
-      position: relative;
-      padding: 4rem 2rem;
-      text-align: center;
-      background: var(--glass-bg);
-      margin: 4rem auto;
-      max-width: 800px;
-      border-radius: 20px;
-      border: 1px solid rgba(255, 255, 255, 0.1);
-    }
-
-    /* Redes Sociales Futuristas */
     .social-links {
       display: flex;
       justify-content: center;
-      gap: 2rem;
-      margin: 3rem 0;
+      gap: 1.5rem;
+      padding: 2rem 0;
     }
-
     .social-link {
-      font-size: 2rem;
+      color: #333;
+      font-size: 1.5rem;
+    }
+    footer {
+      text-align: center;
+      padding: 2rem;
+      background: #222;
       color: white;
-      transition: all 0.3s ease;
-      position: relative;
     }
-
-    .social-link:hover {
-      color: var(--primary);
-      transform: translateY(-5px);
-    }
-
-    /* Animaciones Mejoradas */
-    @keyframes float {
-      0% { transform: translateY(0px); }
-      50% { transform: translateY(-20px); }
-      100% { transform: translateY(0px); }
-    }
-
-    .floating {
-      animation: float 3s ease-in-out infinite;
-    }
-
-    /* Diseño Responsivo */
-    @media (max-width: 768px) {
+    @media screen and (max-width: 600px) {
       .nav-links {
-        display: none;
+        flex-direction: column;
+        align-items: center;
       }
-
-      header {
-        padding: 120px 20px 80px;
-      }
-
-      h1 {
-        font-size: 2.5em;
-      }
-
-      .card-grid {
-        grid-template-columns: 1fr;
+      .nav-container {
+        flex-direction: column;
+        align-items: center;
       }
     }
   </style>
 </head>
-
 <body>
-  <!-- Navbar -->
   <nav class="navbar">
     <div class="nav-container">
       <img src="logo_dronix.png" alt="Dronix Logo" class="nav-logo">
       <div class="nav-links">
         <a href="#servicios" class="nav-link">Servicios</a>
+        <a href="#catalogo" class="nav-link">Catálogo</a>
+        <a href="#mantenimiento" class="nav-link">Mantenimiento</a>
         <a href="#precios" class="nav-link">Precios</a>
         <a href="#contacto" class="nav-link">Contacto</a>
       </div>
     </div>
   </nav>
 
-  <!-- Header -->
   <header>
     <h1 class="floating">DRONIX</h1>
     <p>Tecnología Aérea de Vanguardia</p>
   </header>
 
-  <!-- Servicios -->
   <section id="servicios" class="seccion">
     <div class="titulo">Nuestros Servicios</div>
     <div class="card-grid">
@@ -284,7 +184,32 @@
     </div>
   </section>
 
-  <!-- Precios -->
+  <section id="catalogo" class="seccion">
+    <div class="titulo">Catálogo de Drones</div>
+    <div class="card-grid">
+      <div class="card">
+        <img src="drone1.jpg" alt="Drone 1" style="width: 100%; border-radius: 10px;">
+        <h3>Phantom Pro</h3>
+        <p>Dron profesional con cámara 4K, GPS y gran autonomía.</p>
+      </div>
+      <div class="card">
+        <img src="drone2.jpg" alt="Drone 2" style="width: 100%; border-radius: 10px;">
+        <h3>Mini Air X</h3>
+        <p>Perfecto para principiantes. Compacto, ligero y fácil de usar.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="mantenimiento" class="seccion">
+    <div class="titulo">Agenda tu Mantenimiento</div>
+    <div class="contact-section">
+      <p>¿Tu dron necesita revisión o reparación? Agenda con nosotros:</p>
+      <a href="https://wa.me/525667681754?text=Hola%20quiero%20agendar%20un%20mantenimiento%20para%20mi%20dron" class="boton-contacto">
+        <i class="fab fa-whatsapp"></i> Agendar por WhatsApp
+      </a>
+    </div>
+  </section>
+
   <section id="precios" class="seccion">
     <div class="titulo">Nuestros Precios</div>
     <div class="price-list">
@@ -295,11 +220,23 @@
           <p>$6,500 MXN</p>
         </div>
       </div>
-      <!-- Más items de precios... -->
+      <div class="price-item">
+        <i class="fas fa-wrench"></i>
+        <div>
+          <h4>Mantenimiento Básico</h4>
+          <p>$800 MXN</p>
+        </div>
+      </div>
+      <div class="price-item">
+        <i class="fas fa-cogs"></i>
+        <div>
+          <h4>Revisión Avanzada</h4>
+          <p>$1,500 MXN</p>
+        </div>
+      </div>
     </div>
   </section>
 
-  <!-- Contacto -->
   <section id="contacto" class="contact-section">
     <div class="titulo">Contáctanos</div>
     <p>¿Listo para elevar tu experiencia?</p>
@@ -309,9 +246,8 @@
     </a>
   </section>
 
-  <!-- Redes Sociales -->
   <div class="social-links">
-    <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.instagram.com/dronix_mex" class="social-link"><i class="fab fa-instagram"></i></a>
     <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
     <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
   </div>
